--- a/Eventer/index.html
+++ b/Eventer/index.html
@@ -19,7 +19,7 @@
         </section>
         <!--WELCOME VIEW -->
         <div data-role="view" id="welcome" data-layout="default" class="welcome-scrn form-view" data-model="app.viewModels.login">
-            <h1><b>Everlive</b> sample application</h1>
+            <h1><b>Whee!</b> sample application</h1>
             <form id="login-form">
                 <ul data-role="listview" data-style="inset">
                     <li><label for="loginUsername">Username</label> <input type="text" id="loginUsername" required validationMessage="Username is required!" /></li>
