--- a/Eventer/index.html
+++ b/Eventer/index.html
@@ -19,6 +19,10 @@
         </section>
         <!--WELCOME VIEW -->
         <div data-role="view" id="welcome" data-layout="default" class="welcome-scrn form-view" data-model="app.viewModels.login">
+            <script>
+                app.viewModels.login.login();
+            </script>
+            <!--
             <h1><b>Whee!</b> sample application</h1>
             <form id="login-form">
                 <ul data-role="listview" data-style="inset">
@@ -39,6 +43,7 @@
             </ol>
 
             <div data-role="footer"><p>Powered by Icenium Everlive.</p></div>
+            -->
         </div>
     </body>
 </html>
