--- a/Eventer/index.html
+++ b/Eventer/index.html
@@ -10,6 +10,7 @@
         <script src="scripts/app/identity-provider.js"></script>
         <script src="scripts/app/main.js" type="text/javascript"></script>
 
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:light&v1' rel='stylesheet' type='text/css'>
         <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
         <link href="styles/main.css" rel="stylesheet" />
     </head>
